--- a/css/home.css
+++ b/css/home.css
@@ -1,90 +1,39 @@
-*{
-    flex-wrap: nowrap;
+html, body,.conteiner{
+  height: 100%;
 }
-button, h1{
-    font-family: monospace;
-}
-html body{
-    height: 100%;
+nav{
+  display: flex;
+  padding: 0.5em;
 }
 body{
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+}
+h1,button{
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 h1{
-    font-size: 5em;
-    margin-top: 0.5em;
-}
-ul{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    gap: 1em;
-}
-.card{
-    margin-top: 5em;
-    text-align: center;
-    display: flex;
-    background-color: wheat;
-    padding: 3em;
+  font-size: 5em;
 }
 button{
-    border: 0.1em solid black;
-    padding: 1em;
-    font-size: 2em;
-    width: 20em;
-    background-color: whitesmoke;
+  font-size: 3em;
+  width: 10em;
+  padding: 0.5em;
+  border-radius: 20px;
 }
-button:active{
-    background-color: rgb(197, 197, 197);
-}
-.hidden_card{
-    display: flex;
-    background-color: wheat;
-    padding: 1em;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    border: 1px solid black;
-    gap: 1em;
-    border: 2px solid black;
-    position: absolute;
-    top: 35%;
-}
-.add_button{
-    font-size: 1.5em;
-    width: max-content;
-}
-h2{
-    font-size: 2em;
-}
-input, select{
-    font-size: 1em;
-    width: 10em;
-    height: 2em;
-    text-align: center;
-}
-.inputs{
-    flex-wrap: wrap;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1em;
-}
-#emprestar_livro{
-    width: max-content;
-}
-.column{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-.add_inputs{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: nowrap;
+.conteiner{
+  border-radius: 20px;
+  padding: 2em;
+  position: absolute;
+  top: 25%;
+  background-color: wheat;
+  width: max-content;
+  height: max-content;
+  display: flex;
+  gap: 1em;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
