--- a/css/home.css
+++ b/css/home.css
@@ -10,24 +10,27 @@ body{
   flex-direction: column;
   justify-content: start;
   align-items: center;
+  background-color: white;
+  transition: all 1s ease;
 }
 h1,button{
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 h1{
+  margin-top: 0.5em;
   font-size: 5em;
 }
 button{
   font-size: 3em;
   width: 10em;
+  transition: all 1s ease;
   padding: 0.5em;
   border-radius: 20px;
 }
 .conteiner{
   border-radius: 20px;
   padding: 2em;
-  position: absolute;
-  top: 25%;
+  margin-top: 5em;
   background-color: wheat;
   width: max-content;
   height: max-content;
@@ -36,4 +39,38 @@ button{
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+.row{
+  display: flex;
+  flex-direction: row;
+}
+.theme-bar{
+  width: min-content;
+  font-size: 0.5em;
+  position: absolute;
+  top: 90%;
+  left: 1%;
+  border-radius: 20px;
+  padding: 1em;
+  background: linear-gradient(white black );
+}
+.theme-button{
+  text-wrap: nowrap;
+  width: min-content;
+  background-color: rgb(224, 224, 224);
+  border: 1px solid black;
+  transition: all 1s;
+}
+.button-dark{
+  transition: all 1s ease;
+  background-color: black;
+  color: white;
+  border: 1px solid white; 
+}
+.body-dark{
+  color: white;
+  background-color: black;
+}
+.non-border{
+  border: 0;
 }
