--- a/css/template.css
+++ b/css/template.css
@@ -15,7 +15,7 @@ h1,button, p{
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 h1{
-  padding: 1em;
+  padding: 0.2em;
   font-size: 5em;
 }
 p{
@@ -104,4 +104,11 @@ button:active{
 #required-alert{
   color: rgb(218, 0, 0);
   font-size: 1.5em;
+}
+table, th,td{
+  font-size: 1.2em;
+  border: 1px solid black;
+  width: fit-content;
+  text-align: left;
+  padding: 10px;
 }
