--- a/css/template.css
+++ b/css/template.css
@@ -73,6 +73,8 @@ input,select{
   gap: 2em;
 }
 button{
+  width: fit-content;
+  height: fit-content;
   background-color: rgb(224, 224, 224);
 }
 button:hover{
