--- a/css/template.css
+++ b/css/template.css
@@ -21,15 +21,15 @@ h1{
 p{
   font-size: 2em;
 }
-input,button, select{
+input,button,select{
   font-size: 2em;
   width: 8em;
   padding: 0.5em;
   border-radius: 20px;
   text-align: center;
+  border: 0.02px solid black;
 }
 input,select{
-  border: 0;
   outline: 0;
   height: 100%;
 }
